--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "url": "git+https://github.com/rjoydip/resource-links.git"
   },
   "keywords": [
-    "recources",
+    "resources",
+    "resources-links",
     "jsvascript",
     "node.js",
     "webassembly",
